--- a/package.json
+++ b/package.json
@@ -3,39 +3,51 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/eranelkin"
   },
-  "version": "0.1.6",
+  "version": "0.1.13",
   "description": "A simple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build": "tsc"
   },
   "author": "YOUR_NAME",
   "license": "ISC",
   "devDependencies": {
-    "@mui/material": "^5.2.4",
-    "@mui/styled-engine-sc": "^5.10.6",
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@highcharts/map-collection": "^2.0.1",
+    "@material-ui/core": "^4.12.3",
     "@mdx-js/react": "^2.1.2",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@rollup/plugin-typescript": "8.3.3",
+    "@mui/material": "^5.2.4",
+    "@mui/styled-engine-sc": "^5.10.6",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.2.1",
+    "@rollup/plugin-typescript": "^10.0.1",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.6",
     "@types/proj4": "^2.5.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "clsx": "^1.2.1",
-    "env-cmd": "^10.1.0",
-    "highcharts": "^10.3.1",
-    "highcharts-react-official": "^3.1.0",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
+    "clsx": "^1.2.1",
     "css-loader": "^6.5.1",
+    "env-cmd": "^10.1.0",
+    "eslint": "^8.27.0",
+    "eslint-plugin-react": "^7.31.10",
+    "highcharts": "^10.3.1",
+    "highcharts-react-official": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
@@ -44,28 +56,22 @@
     "react-inject-env": "^2.1.0",
     "react-scripts": "^5.0.1",
     "rollup": "^2.60.0",
-    "rollup-plugin-dts": "^4.0.1",
-    "rollup-plugin-postcss": "^4.0.1",
+    "rollup-plugin-dts": "^5.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rxjs": "^7.3.0",
     "sass": "^1.43.5",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
-    "typescript": "^4.7.4",
-    "rxjs": "^7.3.0",
     "styled-components": "^5.3.6",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@highcharts/map-collection": "^2.0.1",
-    "@material-ui/core": "^4.12.3",
-    "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "eslint": "^8.27.0",
-    "eslint-plugin-react": "^7.31.10"
+    "tslib": "^2.4.1",
+    "typescript": "^4.7.4"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "files": [
-    "dist"
-  ],
   "types": "dist/index.d.ts"
 }
