--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,20 @@
 {
   "compilerOptions": {
-    // Default
     "target": "es5",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-
-    // Added
-    "jsx": "react",
-    "module": "ESNext",
-    "declaration": true,
-    "declarationDir": "types",
+    "module": "esnext",
+    "jsx": "react-jsx",
     "sourceMap": true,
     "outDir": "dist",
+    "strict": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": "src",
+    "resolveJsonModule": true,
+    "declaration": true,
+    "declarationDir": "types",
     "emitDeclarationOnly": true
   }
 }
