--- a/package.json
+++ b/package.json
@@ -31,6 +31,15 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.2.1",
     "@rollup/plugin-typescript": "^10.0.1",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.5.15",
+    "@storybook/testing-library": "^0.0.13",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.6",
     "@types/proj4": "^2.5.2",
@@ -42,7 +51,7 @@
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
     "clsx": "^1.2.1",
-    "css-loader": "^6.5.1",
+    "css-loader": "^6.7.3",
     "env-cmd": "^10.1.0",
     "eslint": "^8.27.0",
     "eslint-plugin-react": "^7.31.10",
@@ -61,8 +70,8 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rxjs": "^7.3.0",
-    "sass": "^1.43.5",
-    "sass-loader": "^12.3.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.6",
     "tslib": "^2.4.1",
